--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @media only screen and (max-width: 767px) {
     /* phones */
     body { width: 97% };
+
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
@@ -24,4 +25,12 @@ select {
 
 .main { 
     font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace; 
+}
+
+.menu {
+    position: fixed;
+    bottom: 5px;
+    left: 5px;
+    padding: 5px;
+    background-color:grey;
 }
